--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,177 +1,212 @@
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "app"
 version = "1.0.0"
 description = "Escape Python Template Project"
 authors = ["Escape Technologies SAS <ping@escape.tech>"]
-maintainers = [
-    "Swan <swan@escape.tech>",
-    "Antoine Carossio <antoine@escape.tech>",
-]
+maintainers = ["Antoine Carossio <antoine@escape.tech>"]
 license = "MIT"
-packages = [{ include = "app" }]
 readme = "README.md"
-"homepage" = "https://escape.tech/"
-"repository" = "https://github.com/Escape-Technologies/python-project-template"
+homepage = "https://escape.tech/"
+repository = "https://github.com/Escape-Technologies/python-project-template"
+[[tool.poetry.packages]]
+include = "app"
 
 [tool.poetry.scripts]
-app-cli = 'app:main'
+app-cli = "app:main"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<=3.14"
-pydantic = "^2.10.5"
+python = ">=3.13,<3.14"
+pydantic = "*"
 rich = "^13.9.4"
 click = "^8.0.0"
 
+
 [tool.poetry.group.dev.dependencies]
-black = { version = "^23.12.1", extras = ["jupyter"] }
-betterproto = { version = "2.0.0b6", extras = ["compiler"] }
-flake8 = "7.1.1"
-mypy = "1.4.1"
-pydot = "3.0.4"
-ruff = "0.9.2"
-toml = "0.10.2"
-pytest = "8.3.4"
-pytest-cov = "6.0.0"
-pytest-mock = "3.14.0"
-pytest-xdist = "3.6.1"
-pytest-asyncio = "0.25.2"
-pytest-timeout = "2.3.1"
-types-PyYAML = "6.0.12.20241230"
-types-protobuf = "5.29.1.20241207"
-types-requests = "2.32.0.20241016"
-types-toml = "0.10.8.6"
-types-jsonschema = "^4.20.0.20240105"
-yamllint = "1.35.1"
-ipykernel = "^6.28.0"
-mdformat = "^0.7.21"
-gitlint = "^0.19.1"
+mypy = "*"
+ruff = "*"
+toml = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-mock = "*"
+pytest-xdist = "*"
+pytest-asyncio = "*"
+pytest-timeout = "*"
+types-requests = "*"
+types-toml = "*"
+types-jsonschema = "*"
+yamllint = "*"
+mdformat = "*"
+gitlint = "*"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
 
-[tool.coverage.run]
-parallel = true
-omit = ["_test.py"]
-
-[tool.pytest.ini_options]
-addopts = []
-filterwarnings = [
-    "ignore:Module already imported.*:pytest.PytestAssertRewriteWarning",
-    "ignore::DeprecationWarning",
-]
-
-[tool.black]
-line-length = 120
-skip-string-normalization = true
+########################################################
+####################### Ruff ###########################
+########################################################
 
 [tool.ruff]
+exclude = [".venv", "poetry.lock", "__pycache__", "pyproject.toml"]
+line-length = 120
+target-version = "py313"
+
+[tool.ruff.lint]
 unfixable = ["F841"]
+ignore = [
+    "UP015",
+    "S311",
+    "S101",
+    "E501",
+    "PYI041",
+    "SIM103",
+    "SIM108",
+    "SIM110",
+    "TD003",
+    "COM812",
+    "ISC001",
+    "ASYNC109",
+    "G003",
+    "G004",
+    "PERF401",
+    "PERF403",
+    "PLR2004",
+    "PLR0911",
+    "PLR0912",
+    "PLR0913",
+    "PLR0914",
+    "PLR0915",
+    "PLR0916",
+    "PLR0917",
+    "TRY002",
+    "TRY003",
+    "TRY300",
+    "TRY301",
+    "N802",
+    "N803",
+    "N805",
+    "N806",
+    "N815",
+    "N812",
+]
+task-tags = ["TODO"]
 select = [
     ## Here are all available rules
-    # https://beta.ruff.rs/docs/rules/
+    # https://docs.astral.sh/ruff/rules/
     # Please, comment or uncomment lines but do not remove them
 
-    "F",   # Pyflakes                          https://beta.ruff.rs/docs/rules/#pyflakes-f
-    "E",   # pycodestyle - Error               https://beta.ruff.rs/docs/rules/#error-e
-    "W",   # pycodestyle - Warning             https://beta.ruff.rs/docs/rules/#warning-w
-    "C90", # mccabe                            https://beta.ruff.rs/docs/rules/#mccabe-c90
-    "I",   # isort                             https://beta.ruff.rs/docs/rules/#isort-i
-    # "N",          # pep8-naming                   x   https://beta.ruff.rs/docs/rules/#pep8-naming-n
-    # "D",          # pydocstyle                    x   https://beta.ruff.rs/docs/rules/#pydocstyle-d
-    # "UP",         # pyupgrade                     x   https://beta.ruff.rs/docs/rules/#pyupgrade-up
-    "YTT", # flake8-2020                       https://beta.ruff.rs/docs/rules/#flake8-2020-ytt
-    # "ANN",        # flake8-annotations                https://beta.ruff.rs/docs/rules/#flake8-annotations-ann
-    "S", # flake8-bandit                     https://beta.ruff.rs/docs/rules/#flake8-bandit-s
-    # "BLE",        # flake8-blind-except               https://beta.ruff.rs/docs/rules/#flake8-blind-except-ble
-    # "FBT",        # flake8-boolean-trap               https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt
-    "B", # flake8-bugbear                    https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
-    # "A",          # flake8-builtins              x    https://beta.ruff.rs/docs/rules/#flake8-builtins-a
-    "COM", # flake8-commas                     https://beta.ruff.rs/docs/rules/#flake8-commas-com
-    "C4",  # flake8-comprehensions             https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
-    # "DTZ",        # flake8-datetimez                  https://beta.ruff.rs/docs/rules/#flake8-datetimez-dtz
-    # "T10",        # flake8-debugger                   https://beta.ruff.rs/docs/rules/#flake8-debugger-t10
-    # "DJ",         # flake8-django                     https://beta.ruff.rs/docs/rules/#flake8-django-dj
-    # "EM",         # flake8-errmsg                     https://beta.ruff.rs/docs/rules/#flake8-errmsg-em
-    # "EXE",        # flake8-executable                 https://beta.ruff.rs/docs/rules/#flake8-executable-exe
-    "ISC", # flake8-implicit-str-concat        https://beta.ruff.rs/docs/rules/#flake8-implicit-str-concat-isc
-    "ICN", # flake8-import-conventions         https://beta.ruff.rs/docs/rules/#flake8-import-conventions-icn
-    # "G",          # flake8-logging-format             https://beta.ruff.rs/docs/rules/#flake8-logging-format-g
-    "INP", # flake8-no-pep420                  https://beta.ruff.rs/docs/rules/#flake8-no-pep420-inp
-    "PIE", # flake8-pie                        https://beta.ruff.rs/docs/rules/#flake8-pie-pie
-    "T20", # flake8-print                      https://beta.ruff.rs/docs/rules/#flake8-print-t20
-    "PYI", # flake8-pyi                        https://beta.ruff.rs/docs/rules/#flake8-pyi-pyi
-    "PT",  # flake8-pytest-style               https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
-    "Q",   # flake8-quotes                     https://beta.ruff.rs/docs/rules/#flake8-quotes-q
-    "RSE", # flake8-raise                      https://beta.ruff.rs/docs/rules/#flake8-raise-rse
-    "RET", # flake8-return                     https://beta.ruff.rs/docs/rules/#flake8-return-ret
-    # "SLF",        # flake8-self                       https://beta.ruff.rs/docs/rules/#flake8-self-slf
-    # "SIM",        # flake8-simplify              x    https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
-    "TID", # flake8-tidy-imports               https://beta.ruff.rs/docs/rules/#flake8-tidy-imports-tid
-    # "TCH",        # flake8-type-checking              https://beta.ruff.rs/docs/rules/#flake8-type-checking-tch
-    "ARG", # flake8-unused-arguments           https://beta.ruff.rs/docs/rules/#flake8-unused-arguments-arg
-    # "PTH",        # flake8-use-pathlib           x    https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
-    # "ERA",        # eradicate                         https://beta.ruff.rs/docs/rules/#eradicate-era
-    # "PD",         # pandas-vet                        https://beta.ruff.rs/docs/rules/#pandas-vet-pd
-    "PGH", # pygrep-hooks                      https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
-    "PL",  # Pylint                       x    https://beta.ruff.rs/docs/rules/#pylint-pl
-    "PLC", # Pylint - Convention               https://beta.ruff.rs/docs/rules/#convention-plc
-    "PLE", # Pylint - Error                    https://beta.ruff.rs/docs/rules/#error-ple
-    "PLR", # Pylint - Refactor                 https://beta.ruff.rs/docs/rules/#refactor-plr
-    "PLW", # Pylint - Warning                  https://beta.ruff.rs/docs/rules/#warning-plw
-    # "TRY",        # tryceratops                  x    https://beta.ruff.rs/docs/rules/#tryceratops-try                      
-    "NPY",   # NumPy-specific rules              https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
-    "RUF",   # Ruff-specific rules               https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
-    "TD002", # flake8-missing-todo-author               https://beta.ruff.rs/docs/rules/#flake8-todos-td
-    "TD004", # flake8-missing-todo-colon                https://beta.ruff.rs/docs/rules/#flake8-todos-td
-    "TD005", # flake8-missing-todo-description              https://beta.ruff.rs/docs/rules/#flake8-todos-td
-    "TD007", # flake8-missing-space-after-todo-colon        https://beta.ruff.rs/docs/rules/#flake8-todos-td
+    "AIR", # Airflow                           https://docs.astral.sh/ruff/rules/#airflow-air
+    # "ERA",        # eradicate                         https://docs.astral.sh/ruff/rules/#eradicate-era
+    "FAST", # fastapi                           https://docs.astral.sh/ruff/rules/#fastapi-fast
+    "YTT",  # flake8-2020                       https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
+    # "ANN",        # flake8-annotations                https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
+    "ASYNC", # flake8-async                       https://docs.astral.sh/ruff/rules/#flake8-async-async
+    "S",     # flake8-bandit                     https://docs.astral.sh/ruff/rules/#flake8-bandit-s
+    # "BLE",        # flake8-blind-except               https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
+    # "FBT",        # flake8-boolean-trap               https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
+    "B",   # flake8-bugbear                    https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
+    "A",   # flake8-builtins                   https://docs.astral.sh/ruff/rules/#flake8-builtins-a
+    "COM", # flake8-commas                     https://docs.astral.sh/ruff/rules/#flake8-commas-com
+    "C4",  # flake8-comprehensions             https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
+    # "CPY",        # flake8-copyright                  https://docs.astral.sh/ruff/rules/#flake8-copyright-cpy
+    "DTZ", # flake8-datetimez                  https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
+    "T10", # flake8-debugger                   https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
+    # "DJ",         # flake8-django                     https://docs.astral.sh/ruff/rules/#flake8-django-dj
+    # "EM",         # flake8-errmsg                     https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
+    "EXE", # flake8-executable                 https://docs.astral.sh/ruff/rules/#flake8-executable-exe
+    # "FIX",        # flake8-fixme                     https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
+    "FA",   # flake8-future-annotations         https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
+    "INT",  # flake8-gettext-int                https://docs.astral.sh/ruff/rules/#flake8-gettext-int
+    "ISC",  # flake8-implicit-str-concat        https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
+    "ICN",  # flake8-import-conventions         https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
+    "LOG",  # flake8-logging                    https://docs.astral.sh/ruff/rules/#flake8-logging-log
+    "G",    # flake8-logging-format             https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
+    "INP",  # flake8-no-pep420                  https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
+    "PIE",  # flake8-pie                        https://docs.astral.sh/ruff/rules/#flake8-pie-pie
+    "T20",  # flake8-print                      https://docs.astral.sh/ruff/rules/#flake8-print-t20
+    "PYI",  # flake8-pyi                        https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
+    "PT",   # flake8-pytest-style               https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
+    "Q",    # flake8-quotes                     https://docs.astral.sh/ruff/rules/#flake8-quotes-q
+    "RSE",  # flake8-raise                      https://docs.astral.sh/ruff/rules/#flake8-raise-rse
+    "RET",  # flake8-return                     https://docs.astral.sh/ruff/rules/#flake8-return-ret
+    "SLF",  # flake8-self                       https://docs.astral.sh/ruff/rules/#flake8-self-slf
+    "SIM",  # flake8-simplify                   https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
+    "SLOT", # flake8-slots                      https://docs.astral.sh/ruff/rules/#flake8-slots-slot
+    "TID",  # flake8-tidy-imports               https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
+    "TD",   # flake8-todos (TD)                 https://docs.astral.sh/ruff/rules/#flake8-todos-td
+    "TC",   # flake8-type-checking              https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
+    "ARG",  # flake8-unused-arguments           https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
+    # "PTH",        # flake8-use-pathlib                https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
+    # "FLY",        # flynt                              https://docs.astral.sh/ruff/rules/#flynt-fly
+    "I",   # isort                             https://docs.astral.sh/ruff/rules/#isort-i
+    "C90", # mccabe                            https://docs.astral.sh/ruff/rules/#mccabe-c90
+    # "NPY",        # numpy                              https://docs.astral.sh/ruff/rules/#numpy-specific-rules-npy
+    # "PD",         # pandas-vet                        https://docs.astral.sh/ruff/rules/#pandas-vet-pd
+    "N",    # pep8-naming                       https://docs.astral.sh/ruff/rules/#pep8-naming-n
+    "PERF", # perflint                          https://docs.astral.sh/ruff/rules/#perflint-perf
+    "E",    # pycodestyle - Error               https://docs.astral.sh/ruff/rules/#error-e
+    "W",    # pycodestyle - Warning             https://docs.astral.sh/ruff/rules/#warning-w
+    # "DOC",        # pydoclint-doc                      https://docs.astral.sh/ruff/rules/#pydoclint-doc
+    # "D",          # pydocstyle                      https://docs.astral.sh/ruff/rules/#pydocstyle-d
+    "F",    # Pyflakes                          https://docs.astral.sh/ruff/rules/#pyflakes-f
+    "PGH",  # pygrep-hooks                      https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
+    "PL",   # Pylint                            https://docs.astral.sh/ruff/rules/#pylint-pl
+    "UP",   # pyupgrade                         https://docs.astral.sh/ruff/rules/#pyupgrade-up
+    "FURB", # flake8-refurb                     https://docs.astral.sh/ruff/rules/#refurb-furb
+    "RUF",  # Ruff-specific rules               https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
+    "TRY",  # tryceratops                      https://docs.astral.sh/ruff/rules/#tryceratops-try
 ]
-exclude = [".venv", "poetry.lock", "__pycache__", "pyproject.toml"]
-ignore = ["UP015", "S311"]
-line-length = 160
-target-version = "py311"
-ignore-init-module-imports = true
-task-tags = ["TODO"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.format]
+quote-style = "preserve"
+
+[tool.ruff.lint.flake8-quotes]
+docstring-quotes = "double"
+inline-quotes = "single"
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = [
-    "F401", # Module imported but unused 
+    "F401", # Module imported but unused
     "F403", # 'from module import *' used; unable to detect undefined names
-]
-"*_test.py" = [
-    "S101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
 ]
 "*/test/*" = [
     "INP001", # is part of an implicit namespace package, missing __init__.py
+    "SLF001", # accessing to a private attribute in a test is ok
+]
+"*/test_*.py" = [
+    "INP001",
+    "SLF001", # accessing to a private attribute in a test is ok
+]
+"*/*_test.py" = [
+    "INP001",
+    "SLF001", # accessing to a private attribute in a test is ok
 ]
 "*/scripts/*" = [
     "INP001", # is part of an implicit namespace package, missing __init__.py
 ]
-"*test_*.py" = [
-    "S101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
-]
 
-[tool.ruff.pydocstyle]
-convention = "google"
+[tool.ruff.lint.pylint]
+max-args = 4
+max-branches = 5
+max-statements = 5
 
-[tool.ruff.flake8-quotes]
-docstring-quotes = "double"
-inline-quotes = "single"
-
-[tool.ruff.pylint]
-max-branches = 15 # Maximum number of branch for function / method body
-max-args = 10     # Maximum number of arguments for function / method 
-
-[tool.ruff.pycodestyle]
+[tool.ruff.lint.pycodestyle]
 max-doc-length = 160
 ignore-overlong-task-comments = true
 
-[tool.ruff.mccabe]
-max-complexity = 15
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+########################################################
+####################### MyPy ###########################
+########################################################
 
 [tool.mypy]
-python_version = "3.12"
+python_version = "3.13"
 disallow_untyped_defs = true
 disallow_untyped_calls = true
 disallow_incomplete_defs = true
@@ -185,7 +220,6 @@ warn_unused_ignores = true
 warn_unused_configs = true
 namespace_packages = true
 pretty = true
-ignore_missing_imports = true
 files = "app, tests"
 exclude = [
     ".venv",
@@ -197,4 +231,20 @@ exclude = [
     "docs",
     "node_modules",
     "__pycache__",
+]
+
+
+########################################################
+####################### Pytest #########################
+########################################################
+
+[tool.coverage.run]
+parallel = true
+omit = ["_test.py"]
+
+[tool.pytest.ini_options]
+addopts = []
+filterwarnings = [
+    "ignore:Module already imported.*:pytest.PytestAssertRewriteWarning",
+    "ignore::DeprecationWarning",
 ]
