--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python = ">=3.13,<3.14"
 pydantic = "*"
 rich = "^13.9.4"
 click = "^8.0.0"
+pandas = "^2.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
