--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,9 @@ app-cli = "app:main"
 
 [tool.poetry.dependencies]
 python = ">=3.13,<3.14"
-pydantic = "*"
+pydantic = "^2.11.7"
 rich = "^13.9.4"
-click = "^8.0.0"
+click = "^8.2.1"
 pandas = "^2.3.1"
 
 
@@ -200,7 +200,7 @@ max-doc-length = 160
 ignore-overlong-task-comments = true
 
 [tool.ruff.lint.mccabe]
-max-complexity = 10
+max-complexity = 15
 
 ########################################################
 ####################### MyPy ###########################
