--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ app-cli = "app:main"
 python = ">=3.11,<3.14"
 pydantic = "^2.11.7"
 rich = "^13.9.4"
-click = "^8.2.1"
+click = ">=8.1.3,<9.0.0"
 pandas = "^2.3.1"
 
 
