--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ types-jsonschema = "*"
 yamllint = "*"
 mdformat = "*"
 gitlint = "*"
+black = "*"
 
 
 ########################################################
